--- a/PV_ICE_waste_calculations/PVICE & Relog - PCA baselines for Si & CdTe & MassFlows Calculations REORGANIZED.html
+++ b/PV_ICE_waste_calculations/PVICE & Relog - PCA baselines for Si & CdTe & MassFlows Calculations REORGANIZED.html
@@ -14603,7 +14603,7 @@ o   95-by-35+Elec.Adv+DR ,  a.k.a. "Solar Futures Decarbonization + Electrificat
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[1]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[10]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">PV_ICE</span>
@@ -14627,7 +14627,7 @@ o   95-by-35+Elec.Adv+DR ,  a.k.a. "Solar Futures Decarbonization + Electrificat
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[2]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[11]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">os</span>
@@ -14657,7 +14657,7 @@ o   95-by-35+Elec.Adv+DR ,  a.k.a. "Solar Futures Decarbonization + Electrificat
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>Your simulation will be stored in /Users/mmendez/Documents/Postdoc/Software_dev/PV_ICE/TEMP
+<pre>Your simulation will be stored in /Users/mmendez/Documents/Postdoc/PV_ICE/TEMP
 </pre>
 </div>
 </div>
@@ -14671,7 +14671,7 @@ o   95-by-35+Elec.Adv+DR ,  a.k.a. "Solar Futures Decarbonization + Electrificat
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[3]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[12]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">PV_ICE</span><span class="o">.</span><span class="n">__version__</span>
@@ -14692,7 +14692,7 @@ o   95-by-35+Elec.Adv+DR ,  a.k.a. "Solar Futures Decarbonization + Electrificat
 <div class="jp-OutputArea-child">
 
     
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[3]:</div>
+    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[12]:</div>
 
 
 
@@ -14734,10 +14734,10 @@ o   95-by-35+Elec.Adv+DR ,  a.k.a. "Solar Futures Decarbonization + Electrificat
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[4]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[14]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">reedsFile</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">Path</span><span class="p">()</span><span class="o">.</span><span class="n">resolve</span><span class="p">()</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">parent</span> <span class="o">/</span> <span class="s1">&#39;December Core Scenarios ReEDS Outputs Solar Futures v3a.xlsx&#39;</span><span class="p">)</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">reedsFile</span> <span class="o">=</span> <span class="nb">str</span><span class="p">(</span><span class="n">Path</span><span class="p">()</span><span class="o">.</span><span class="n">resolve</span><span class="p">()</span><span class="o">.</span><span class="n">parent</span><span class="o">.</span><span class="n">parent</span> <span class="o">/</span> <span class="s1">&#39;December Core Scenarios ReEDS Outputs Solar Futures v3a.xlsx&#39;</span><span class="p">)</span>
 <span class="nb">print</span> <span class="p">(</span><span class="s2">&quot;Input file is stored in </span><span class="si">%s</span><span class="s2">&quot;</span> <span class="o">%</span> <span class="n">reedsFile</span><span class="p">)</span>
 </pre></div>
 
@@ -14760,7 +14760,7 @@ o   95-by-35+Elec.Adv+DR ,  a.k.a. "Solar Futures Decarbonization + Electrificat
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>Input file is stored in /Users/mmendez/Documents/Postdoc/December Core Scenarios ReEDS Outputs Solar Futures v3a.xlsx
+<pre>Input file is stored in /Users/mmendez/Documents/Postdoc/Software_dev/December Core Scenarios ReEDS Outputs Solar Futures v3a.xlsx
 </pre>
 </div>
 </div>
