--- a/3_RELOG_simulation/0_Folder_generation.html
+++ b/3_RELOG_simulation/0_Folder_generation.html
@@ -14630,7 +14630,7 @@ There are three main folders in which we need to create new folders:</p>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[118]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[129]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">os</span>
@@ -14649,11 +14649,11 @@ There are three main folders in which we need to create new folders:</p>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[5]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[130]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">date</span> <span class="o">=</span> <span class="n">datetime</span><span class="o">.</span><span class="n">today</span><span class="p">()</span><span class="o">.</span><span class="n">strftime</span><span class="p">(</span><span class="s1">&#39;%Y%m</span><span class="si">%d</span><span class="s1">&#39;</span><span class="p">)</span>
-<span class="n">simulation_name</span> <span class="o">=</span> <span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="n">date</span><span class="si">}</span><span class="s1">_CASE0_v1&#39;</span> <span class="c1"># This line is the only one that needs to be changed. CASE0 is gthe name and v1 is the version</span>
+<span class="n">simulation_name</span> <span class="o">=</span> <span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="n">date</span><span class="si">}</span><span class="s1">_CASE0_v2&#39;</span> <span class="c1"># This line is the only one that needs to be changed. CASE0 is gthe name and v1 is the version</span>
 <span class="n">simulation_whatif</span> <span class="o">=</span> <span class="s1">&#39;what-if_&#39;</span> <span class="o">+</span> <span class="n">simulation_name</span>
 </pre></div>
 
@@ -14678,7 +14678,7 @@ There are three main folders in which we need to create new folders:</p>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[6]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[131]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">cwd</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">getcwd</span><span class="p">()</span>
@@ -14694,7 +14694,7 @@ There are three main folders in which we need to create new folders:</p>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[7]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[132]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">input_file</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">cwd</span><span class="p">,</span> <span class="s1">&#39;input&#39;</span><span class="p">,</span> <span class="n">simulation_name</span><span class="p">)</span>
@@ -14715,7 +14715,7 @@ There are three main folders in which we need to create new folders:</p>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[8]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[133]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">files_to_create</span> <span class="o">=</span> <span class="p">[</span><span class="n">input_file</span><span class="p">,</span> <span class="n">input_file_whatif</span><span class="p">,</span> <span class="n">output_file</span><span class="p">,</span> <span class="n">output_file_whatif</span><span class="p">,</span> <span class="n">figures_file</span><span class="p">,</span> <span class="n">figures_file_whatif</span><span class="p">]</span>
@@ -14731,7 +14731,7 @@ There are three main folders in which we need to create new folders:</p>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[9]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[134]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">files_to_create</span><span class="p">[</span><span class="mi">5</span><span class="p">]</span>
@@ -14752,13 +14752,13 @@ There are three main folders in which we need to create new folders:</p>
 <div class="jp-OutputArea-child">
 
     
-    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[9]:</div>
+    <div class="jp-OutputPrompt jp-OutputArea-prompt">Out[134]:</div>
 
 
 
 
 <div class="jp-RenderedText jp-OutputArea-output jp-OutputArea-executeResult" data-mime-type="text/plain">
-<pre>&#39;/Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230222_CASE0_v1&#39;</pre>
+<pre>&#39;/Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230223_CASE0_v2&#39;</pre>
 </div>
 
 </div>
@@ -14772,7 +14772,7 @@ There are three main folders in which we need to create new folders:</p>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[10]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[135]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">for</span> <span class="n">files</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">files_to_create</span><span class="p">)):</span>
@@ -14805,12 +14805,12 @@ There are three main folders in which we need to create new folders:</p>
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/20230222_CASE0_v1 has been created!
-The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/what-if_20230222_CASE0_v1 has been created!
-The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/20230222_CASE0_v1 has been created!
-The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/what-if_20230222_CASE0_v1 has been created!
-The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/20230222_CASE0_v1 has been created!
-The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230222_CASE0_v1 has been created!
+<pre>The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/20230223_CASE0_v2 has been created!
+The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/what-if_20230223_CASE0_v2 has been created!
+The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/20230223_CASE0_v2 has been created!
+The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/output/what-if_20230223_CASE0_v2 has been created!
+The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/20230223_CASE0_v2 has been created!
+The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/figures/what-if_20230223_CASE0_v2 has been created!
 </pre>
 </div>
 </div>
@@ -14847,7 +14847,7 @@ The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[12]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[136]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">cwd</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">getcwd</span><span class="p">()</span>
@@ -14863,7 +14863,7 @@ The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[42]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[137]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">test</span> <span class="o">=</span> <span class="kc">False</span>
@@ -14879,7 +14879,7 @@ The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[43]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[138]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">if</span> <span class="n">test</span><span class="p">:</span>
@@ -14912,7 +14912,7 @@ The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[51]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[139]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">input_solver_folder_location</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">cwd</span><span class="p">,</span> <span class="s1">&#39;input&#39;</span><span class="p">,</span> <span class="n">simulation_name</span><span class="p">)</span>
@@ -14957,7 +14957,7 @@ The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[54]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[140]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="k">for</span> <span class="n">files</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="nb">len</span><span class="p">(</span><span class="n">simulation_folders</span><span class="p">)):</span>
@@ -14986,10 +14986,16 @@ The new directory for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG
     <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
 
 
-<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>The path for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/20230222_CASE0_v1 exists! You may continue to the next step.
-The path for /Users/mmendez/Documents/Postdoc/Software_dev/RICE/3_RELOG_simulation/input/what-if_20230222_CASE0_v1 exists! You may continue to the next step.
-</pre>
+<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr">
+<pre>
+<span class="ansi-red-fg">---------------------------------------------------------------------------</span>
+<span class="ansi-red-fg">NameError</span>                                 Traceback (most recent call last)
+Cell <span class="ansi-green-fg">In [140], line 6</span>
+<span class="ansi-green-intense-fg ansi-bold">      4</span>     <span style="color: rgb(0,135,0)">print</span>(<span style="color: rgb(175,0,0)">f</span><span style="color: rgb(175,0,0)">&#34;</span><span style="color: rgb(175,0,0)">The path for </span><span class="ansi-bold" style="color: rgb(175,95,135)">{</span>simulation_folders[files]<span class="ansi-bold" style="color: rgb(175,95,135)">}</span><span style="color: rgb(175,0,0)"> exists! You may continue to the next step.</span><span style="color: rgb(175,0,0)">&#34;</span>)
+<span class="ansi-green-intense-fg ansi-bold">      5</span> <span class="ansi-bold" style="color: rgb(0,135,0)">else</span>:
+<span class="ansi-green-fg">----&gt; 6</span>     <span class="ansi-bold" style="color: rgb(0,135,0)">raise</span> <span class="ansi-yellow-bg">PathNotFoundError</span>(<span style="color: rgb(175,0,0)">f</span><span style="color: rgb(175,0,0)">&#39;</span><span style="color: rgb(175,0,0)">The path </span><span class="ansi-bold" style="color: rgb(175,95,135)">{</span>input_solver_file_location<span class="ansi-bold" style="color: rgb(175,95,135)">}</span><span style="color: rgb(175,0,0)"> does not exist, please generate the necessary folders using the 0_Folder_generation.ipynb found in 3_RELOG_simulation.</span><span style="color: rgb(175,0,0)">&#39;</span>)
+
+<span class="ansi-red-fg">NameError</span>: name &#39;PathNotFoundError&#39; is not defined</pre>
 </div>
 </div>
 
