--- a/2_data_preparation/data_preprocess_1.html
+++ b/2_data_preparation/data_preprocess_1.html
@@ -14621,7 +14621,7 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[1]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[2]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
@@ -17576,11 +17576,11 @@ From 2023 to 2050, we have a total of 28 amounts.</p>
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[238]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[4]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">cwd</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">getcwd</span><span class="p">()</span>
-<span class="n">cl_nwike_battery</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">cwd</span><span class="p">,</span> <span class="s1">&#39;RELOG_import_data&#39;</span><span class="p">,</span> <span class="s1">&#39;Candidate locations - Battery Project.csv&#39;</span><span class="p">))</span>
+<span class="n">cl_nwike_battery</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="n">cwd</span><span class="p">,</span> <span class="s1">&#39;RELOG_import_data&#39;</span><span class="p">,</span> <span class="s1">&#39;CandidateLocations&#39;</span><span class="p">,</span><span class="s1">&#39;Candidate locations - Battery Project.csv&#39;</span><span class="p">))</span>
 </pre></div>
 
      </div>
@@ -18904,7 +18904,7 @@ Although this file is technically already with the right format, the area cost f
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[218]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">cadidate_loc</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s1">&#39;RELOG_import_data&#39;</span><span class="p">,</span> <span class="s1">&#39;CandidateLocations_op_NM.csv&#39;</span><span class="p">))</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">cadidate_loc</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s1">&#39;RELOG_import_data&#39;</span><span class="p">,</span> <span class="s1">&#39;CandidateLocations&#39;</span> <span class="p">,</span> <span class="s1">&#39;CandidateLocations_op_NM.csv&#39;</span><span class="p">))</span>
 </pre></div>
 
      </div>
@@ -19789,7 +19789,7 @@ Although this file is technically already with the right format, the area cost f
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">cadidate_loc_2</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s1">&#39;RELOG_import_data&#39;</span><span class="p">,</span> <span class="s1">&#39;Candidate locations - Battery Project.csv&#39;</span><span class="p">))</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">cadidate_loc_2</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">join</span><span class="p">(</span><span class="s1">&#39;RELOG_import_data&#39;</span><span class="p">,</span> <span class="s1">&#39;CandidateLocations&#39;</span><span class="p">,</span><span class="s1">&#39;Candidate locations - Battery Project.csv&#39;</span><span class="p">))</span>
 </pre></div>
 
      </div>
@@ -19881,7 +19881,7 @@ Although this file is technically already with the right format, the area cost f
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">candidate_locations</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;name&#39;</span><span class="p">,</span> <span class="s1">&#39;latitude (deg)&#39;</span><span class="p">,</span> <span class="s1">&#39;longitude (deg)&#39;</span><span class="p">,</span> <span class="s1">&#39;area cost factor&#39;</span><span class="p">])</span>                
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">candidate_locations</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">DataFrame</span><span class="p">(</span><span class="n">columns</span><span class="o">=</span><span class="p">[</span><span class="s1">&#39;name&#39;</span><span class="p">,</span> <span class="s1">&#39;latitude (deg)&#39;</span><span class="p">,</span> <span class="s1">&#39;longitude (deg)&#39;</span><span class="p">,</span> <span class="s1">&#39;initial capacity (tonne)&#39;</span><span class="p">,</span><span class="s1">&#39;area cost factor&#39;</span><span class="p">])</span>                
 </pre></div>
 
      </div>
