--- a/1_PV_ICE_waste_calculations/1 - PVICE & RELOG - PCA baselines for Si & CdTe.html
+++ b/1_PV_ICE_waste_calculations/1 - PVICE & RELOG - PCA baselines for Si & CdTe.html
@@ -15906,7 +15906,7 @@ o   95-by-35+Elec.Adv+DR ,  a.k.a. "Solar Futures Decarbonization + Electrificat
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[11]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Heathers suggestion</span>
@@ -15923,12 +15923,12 @@ o   95-by-35+Elec.Adv+DR ,  a.k.a. "Solar Futures Decarbonization + Electrificat
 </div>
 </div>
 
-</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[12]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#generae a dataset for the area in between</span>
@@ -15943,6 +15943,53 @@ o   95-by-35+Elec.Adv+DR ,  a.k.a. "Solar Futures Decarbonization + Electrificat
 <span class="c1">#print(mod_eff_late)</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">plot</span><span class="p">(</span><span class="n">mod_eff_late</span><span class="p">)</span>
 <span class="c1">#mod_eff_late.to_csv(cwd+&#39;/../../../PV_ICE/baselines/SupportingMaterial/output_module_eff_perovskite.csv&#39;, index=True)</span>
+</pre></div>
+
+     </div>
+</div>
+</div>
+</div>
+
+<div class="jp-Cell-outputWrapper">
+<div class="jp-Collapser jp-OutputCollapser jp-Cell-outputCollapser">
+</div>
+
+
+<div class="jp-OutputArea jp-Cell-outputArea">
+
+<div class="jp-OutputArea-child">
+
+    
+    <div class="jp-OutputPrompt jp-OutputArea-prompt"></div>
+
+
+<div class="jp-RenderedText jp-OutputArea-output" data-mime-type="application/vnd.jupyter.stderr">
+<pre>
+<span class="ansi-red-fg">---------------------------------------------------------------------------</span>
+<span class="ansi-red-fg">NameError</span>                                 Traceback (most recent call last)
+Input <span class="ansi-green-fg">In [12]</span>, in <span class="ansi-cyan-fg">&lt;cell line: 2&gt;</span><span class="ansi-blue-fg">()</span>
+<span class="ansi-green-intense-fg ansi-bold">      1</span> <span style="color: rgb(95,135,135)">#generae a dataset for the area in between</span>
+<span class="ansi-green-fg">----&gt; 2</span> mod_eff_late <span style="color: rgb(98,98,98)">=</span> <span class="ansi-yellow-bg">mod_eff_raw</span><span style="color: rgb(98,98,98)">.</span>loc[(mod_eff_raw<span style="color: rgb(98,98,98)">.</span>index<span style="color: rgb(98,98,98)">&gt;</span><span style="color: rgb(98,98,98)">=</span><span style="color: rgb(98,98,98)">2020</span>)]
+<span class="ansi-green-intense-fg ansi-bold">      4</span> y_dummy <span style="color: rgb(98,98,98)">=</span> power_law(mod_eff_late<span style="color: rgb(98,98,98)">.</span>index<span style="color: rgb(98,98,98)">-</span><span style="color: rgb(98,98,98)">2019</span>, mod_eff_late[<span style="color: rgb(175,0,0)">&#39;</span><span style="color: rgb(175,0,0)">mod_eff</span><span style="color: rgb(175,0,0)">&#39;</span>][<span style="color: rgb(98,98,98)">2020</span>], <span style="color: rgb(98,98,98)">0.065</span>) <span style="color: rgb(95,135,135)">#17.9</span>
+<span class="ansi-green-intense-fg ansi-bold">      5</span> <span style="color: rgb(95,135,135)">#played around with the exponential until y_dummy[31] closely matched projected 25.06% value. CITE</span>
+
+<span class="ansi-red-fg">NameError</span>: name &#39;mod_eff_raw&#39; is not defined</pre>
+</div>
+</div>
+
+</div>
+
+</div>
+
+</div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea">
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
+<div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
+     <div class="CodeMirror cm-s-jupyter">
+<div class=" highlight hl-ipython3"><pre><span></span> 
 </pre></div>
 
      </div>
